# Campaign-Alchemy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-production  README.md  docker-compose.yml  entrypoint-production.sh  entrypoint.sh  manage.py  pyproject.toml  setup.cfg
.envs/.example/: .django
.envs/.local/: .django  .postgres
.envs/.production/: .django  .postgres
.github/workflows/: ci.yml
apps/: conftest.py  mixins.py  search.py  utils.py
apps/campaigns/: admin.py  models.py  tests.py  urls.py  views.py
apps/campaigns/migrations/: 0001_initial.py  0002_initial.py  0002_remove_campaign_players.py  0003_remove_campaign_is_active.py  0004_campaign_invite_code.py  0005_campaign_vector_column_and_more.py  0006_generated_columns.py  0007_campaign_campaigns_c_name_602631_idx.py  0008_alter_campaign_description.py
apps/campaigns/templatetags/: campaigns_filters.py
apps/characters/: forms.py  models.py  tests.py  urls.py  views.py
apps/characters/migrations/: 0001_initial.py  0002_initial.py  0003_character_is_npc.py  0004_alter_character_location.py  0005_remove_character_is_active.py  0006_character_vector_column_and_more.py  0007_create_trigger.py  0008_remove_character_creator.py  0009_character_characters__name_6d8b81_idx.py  0010_alter_character_description.py  0011_character_creator_alter_character_player.py  0012_alter_character_image.py  0013_remove_character_location.py
apps/locations/: forms.py  models.py  tests.py  urls.py  views.py
apps/locations/migrations/: 0001_initial.py  0002_remove_location_image_remove_location_thumbnail.py  0003_location_locations_l_name_0dcc82_idx.py  0004_location_image.py  0005_alter_location_description.py  0006_alter_location_image.py  0007_alter_location_options.py  0008_location_vector_column_and_more.py  0009_create_trigger.py  0010_alter_location_options_location_order.py  0011_location_hidden.py  0012_alter_location_options_remove_location_order.py
apps/maps/: admin.py  models.py  tests.py  urls.py  views.py
apps/maps/migrations/: 0001_initial.py  0002_location.py  0002_map_resolution_height_map_resolution_width.py  0003_location_image_location_thumbnail.py  0003_remove_map_is_active.py  0004_map_vector_column_map_maps_map_vector__ba181f_gin.py  0005_create_trigger.py  0006_map_maps_map_name_c173ad_idx.py  0007_alter_map_description.py
apps/static/css/: project.css
apps/static/js/: project.js
apps/templates/: 403.html  404.html  500.html  base.html  confirm_delete.html  search_results.html  toasts.html
apps/templates/admin/: base_site.html
apps/templates/campaigns/: _partial_campaign_detail.html  _partial_campaign_list.html  campaign_detail.html  campaign_form.html  campaign_list.html  campaign_partial_detail.html  campaign_partial_list.html  campaigns_detail.html  campaigns_form.html  campaigns_list.html
apps/templates/characters/: _partial_character_detail.html  _partial_character_list.html  add_to_campaign_form.html  character_card_footer.html  character_detail.html  character_detail_partial.html  character_form.html  character_list.html  list.html  partial_list.html
apps/users/: admin.py  apps.py  context_processors.py  models.py  views.py
apps/utils/: decorators.py
campaignalchemy/: asgi.py  urls.py  wsgi.py
campaignalchemy/settings/: base.py  local.py  production.py  test.py
campaigncreator/: asgi.py  settings.py  urls.py  wsgi.py
campaigncreator/settings/: base.py  local.py
(+30 files in other folders)
