[tool.poetry]
name = "Campaign Alchemy"
version = "0.1.0"
description = "Campaign Alchemy for RPG's."
authors = ["Wouter Lansu <wfrlansu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.3"
django-debug-toolbar = "^4.1.0"
Pillow = "^10.0.0"
django-model-utils = "^4.2.0"
whitenoise = "^6.2.0"
django-storages = "^1.13.1"
django-allauth = "^0.54.0"
crispy-bootstrap5 = "^0.7"
django-crispy-forms = "^2.0"
django-environ = "^0.10.0"
argon2-cffi = "^21.3.0"
rcssmin = "^1.1.1"
django-compressor = "^4.4"
pytz = "^2023.3"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
python-slugify = "^7.0.0"
django-htmx = "^1.12.2"
django-cleanup = "^8.0.0"
sentry-sdk = "^1.9.10"
django-redis = "^5.2.0"
boto3 = "^1.24.89"
gunicorn = "^21.2.0"
django-tinymce = "^3.5.0"
bleach = "^5.0.1"
django-bleach = "^3.0.1"
django-anymail = {extras = ["mailjet"], version = "^10.0"}
psycopg2 = "^2.9.5"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.2.1"
pytest = "^7.1.3"
pytest-django = "^4.5.2"
pytest-sugar = "^0.9.5"
django-stubs = "^4.2.3"
mypy = "^1.4.1"
model-bakery = "^1.7.0"
pytest-lazy-fixture = "^0.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "campaignalchemy.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
filterwarnings = [
    "ignore::UserWarning",
]
